--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,12 +1,38 @@
 footer {
   background-color: var(--footer-hero-background);
   padding-top: 60px;
-  padding-bottom: 60px;
+
+  @media screen and (min-width: 768px) {
+    padding-bottom: 60px;
+  }
 }
 
 .footer {
   display: flex;
-  align-items: baseline;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+    text-align: left;
+  }
+}
+
+.footer-main {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    gap: 165px;
+  }
+  @media screen and (min-width: 1200px) {
+    gap: 70px;
+  }
+}
+
+.footer-left {
+  @media screen and (min-width: 1200px) {
+    width: 231px;
+  }
 }
 
 .footer-addr {
@@ -39,7 +65,18 @@ footer {
 }
 
 .footer-socials {
-  margin-left: 70px;
+  margin-top: 60px;
+  // margin-left: 70px;
+  text-align: center;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 5px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    text-align: left;
+    width: 206px;
+  }
 }
 
 .footer-socials-header {
@@ -83,18 +120,38 @@ footer {
 }
 
 .footer-email-input {
-  display: block;
+  margin: 60px;
+  text-align: center;
+  display: inline-block;
   margin-left: auto;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin: 60px;
+    margin-bottom: 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    text-align-last: left;
+    margin-top: 0;
+    margin-right: 0;
+  }
 }
 
 .footer-form {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
-  gap: 12px;
+  gap: 20px;
+
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+    gap: 12px;
+  }
 }
 
 .footer-email-input-field {
-  width: 358px;
+  width: 450px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -102,6 +159,10 @@ footer {
   background-color: transparent;
   padding: 16px 15px;
   color: var(--white-color);
+
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+  }
 }
 
 .footer-form-btn {
