--- a/sass/layouts/_whatwedo.scss
+++ b/sass/layouts/_whatwedo.scss
@@ -1,6 +1,10 @@
 .whatwedo {
-  // @extend %section;
-  @include section(94px);
+  display: none;
+
+  @media screen and (min-width: 1200px) {
+    display: block;
+    @include section(94px);
+  }
 
   padding-top: 47px;
 }
