--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import './components/subscribe-form';
 @import './components/filter_buttons';
 @import './components/modal-form';
+@import './components/mobile-menu';
 
 // layouts styles
 @import './layouts/header';
