--- a/sass/components/_filter_buttons.scss
+++ b/sass/components/_filter_buttons.scss
@@ -1,7 +1,17 @@
 .portfolio-filter-button {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+  row-gap: 15px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+    justify-content: center;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
 .filter-button {
