--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,8 +1,8 @@
 .hero {
-  @include section(200px);
+  @include section(118px);
 
   max-width: 1600px;
-  height: 600px;
+  height: 400px;
 
   margin-left: auto;
   margin-right: auto;
@@ -14,26 +14,41 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+
+  @media screen and (min-width: 1200px) {
+    @include section(200px);
+    height: 600px;
+  }
 }
 
 .hero__title {
-  width: 696px;
+  width: 360px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--white-color);
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-bottom: 40px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .hero__btn {
   display: block;
-  padding: 10px 32px;
+  padding: 10px 24px;
   margin: auto;
   font-family: inherit;
   color: var(--white-color);
@@ -48,6 +63,10 @@
   border: none;
   cursor: pointer;
   transition: color 250ms var(--cubic-bezier);
+
+  @media screen and (min-width: 1200px) {
+    padding: 10px 32px;
+  }
 }
 
 .hero__btn:hover,
