--- a/sass/layouts/_our-team.scss
+++ b/sass/layouts/_our-team.scss
@@ -1,11 +1,22 @@
 .our-team {
-  @include section(94px);
-
+  @include section(60px);
   background-color: #f5f4fa;
+
+  @media screen and (min-width: 1200px) {
+    @include section(94px);
+  }
 }
 
 .our-team-list {
-  --item: 4;
+  --item: 1;
+
+  @media screen and (min-width: 768px) {
+    --item: 2;
+  }
+
+  @media screen and (min-width: 1200px) {
+    --item: 4;
+  }
 }
 
 .our-team-item {
@@ -13,6 +24,18 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+
+.our-team-photo {
+  @media screen and (min-width: 768px) {
+    width: 354px;
+    height: 374px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+    height: 260px;
+  }
 }
 
 .our-team-wrapper {
