--- a/sass/layouts/_perm-clients.scss
+++ b/sass/layouts/_perm-clients.scss
@@ -1,11 +1,21 @@
 .perm-clients {
-  @include section(94px);
+  @include section(60px);
+
+  @media screen and (min-width: 1200px) {
+    @include section(94px);
+  }
 }
 
 .perm-clients-list {
-  --item: 6;
-  --indent: 30px;
-  margin-right: -30px;
+  --item: 2;
+
+  @media screen and (min-width: 768px) {
+    --item: 3;
+  }
+
+  @media screen and (min-width: 1200px) {
+    --item: 6;
+  }
 }
 
 .perm-clients-list:not(:last-child) {
@@ -17,7 +27,7 @@
   align-items: center;
   justify-content: center;
   height: 92px;
-  width: 170px;
+  width: 100%;
   color: var(--icon-fill-color);
   border: 1px solid var(--icon-fill-color);
   border-radius: 4px;
