--- a/css/main.css
+++ b/css/main.css
@@ -556,7 +556,7 @@ span.logo-prefix {
   background: #ffffff;
   -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -642,6 +642,7 @@ span.logo-prefix {
 
 .header {
   border-bottom: 1px solid #ececec;
+  position: relative;
 }
 
 .header__cotainer {
@@ -652,7 +653,7 @@ span.logo-prefix {
       -ms-flex-align: center;
           align-items: center;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 480px) {
   .header__cotainer {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
@@ -742,7 +743,7 @@ span.logo-prefix {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  margin: 0;
+  margin-left: auto;
   padding: 0;
   border: 0;
   background-color: transparent;
@@ -754,6 +755,18 @@ span.logo-prefix {
 }
 .menu-button:hover {
   fill: var(--accent-color);
+}
+
+.menu-button .icon-close {
+  display: none;
+}
+
+.menu-button.is-open .icon-close {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
 }
 
 .hero {
