--- a/css/main.css
+++ b/css/main.css
@@ -558,7 +558,7 @@ span.logo-prefix {
   background: #ffffff;
   -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -743,10 +743,7 @@ span.logo-prefix {
 
 .menu-button {
   position: relative;
-  z-index: 10;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  z-index: 100;
   margin-left: auto;
   padding: 0;
   border: 0;
@@ -757,6 +754,9 @@ span.logo-prefix {
   .menu-button {
     display: none;
   }
+}
+.menu-button:focus, .menu-button:hover {
+  fill: var(--accent-color);
 }
 
 .menu-button .icon-close {
