--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -79,8 +79,8 @@
 
 .menu-button {
   position: relative;
-  z-index: 10;
-  display: inline-flex;
+  z-index: 100;
+  // display: inline-flex;
   margin-left: auto;
   padding: 0;
   border: 0;
@@ -90,7 +90,16 @@
   @media screen and (min-width: 768px) {
     display: none;
   }
+
+  &:focus,
+  &:hover {
+    fill: var(--accent-color);
+  }
 }
+
+// .svg:hover {
+//   fill: var(--accent-color);
+// }
 
 .menu-button .icon-close {
   display: none;
