--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -39,7 +39,7 @@
 
 .portfolio-item-link-group img {
   width: 450px;
-  height: 294px;
+  height: auto;
 
   // @media screen and (min-width: 768px) {
   //   width: 354px;
