--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -120,7 +120,7 @@ footer {
 }
 
 .footer-email-input {
-  margin: 60px;
+  margin-top: 60px;
   text-align: center;
   display: inline-block;
   margin-left: auto;
@@ -151,7 +151,8 @@ footer {
 }
 
 .footer-email-input-field {
-  width: 450px;
+  max-width: 450px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
