--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -22,7 +22,8 @@
 }
 
 .hero__title {
-  width: 360px;
+  max-width: 360px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
