--- a/css/main.css
+++ b/css/main.css
@@ -199,22 +199,50 @@ span.logo-prefix {
 }
 
 .footer-email-input {
-  display: block;
-  margin-left: auto;
+  margin: 60px 0;
+  text-align: center;
+  display: inline-block;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-email-input {
+    margin: 60px;
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-email-input {
+    -moz-text-align-last: left;
+         text-align-last: left;
+    margin-top: 0;
+    margin-right: 0;
+  }
 }
 
 .footer-form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 12px;
+  gap: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .footer-form {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    gap: 12px;
+  }
 }
 
 .footer-email-input-field {
-  width: 358px;
+  max-width: 450px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -223,6 +251,11 @@ span.logo-prefix {
   background-color: transparent;
   padding: 16px 15px;
   color: var(--white-color);
+}
+@media screen and (min-width: 1200px) {
+  .footer-email-input-field {
+    width: 358px;
+  }
 }
 
 .footer-form-btn {
@@ -1289,116 +1322,6 @@ footer {
 .footer-soc-icon {
   width: 20px;
   height: 20px;
-  fill: currentColor;
-}
-
-.footer-email-input {
-  margin-top: 60px;
-  text-align: center;
-  display: inline-block;
-  margin-left: auto;
-}
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .footer-email-input {
-    margin: 60px;
-    margin-bottom: 0;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .footer-email-input {
-    -moz-text-align-last: left;
-         text-align-last: left;
-    margin-top: 0;
-    margin-right: 0;
-  }
-}
-
-.footer-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 20px;
-}
-@media screen and (min-width: 1200px) {
-  .footer-form {
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-    gap: 12px;
-  }
-}
-
-.footer-email-input-field {
-  max-width: 450px;
-  width: 100%;
-  height: 50px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background-color: transparent;
-  padding: 16px 15px;
-  color: var(--white-color);
-}
-@media screen and (min-width: 1200px) {
-  .footer-email-input-field {
-    width: 358px;
-  }
-}
-
-.footer-form-btn {
-  margin-top: auto;
-}
-
-.footer-sign-btn {
-  width: 200px;
-  height: 50px;
-  background: var(--accent-color);
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-  color: var(--white-color);
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  gap: 10px;
-}
-
-.footer-sign-btn-text {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: #ffffff;
-}
-
-.footer-btn-icon-send {
   fill: currentColor;
 }
 
