--- a/sass/components/_subscribe-form.scss
+++ b/sass/components/_subscribe-form.scss
@@ -1,16 +1,37 @@
 .footer-email-input {
-  display: block;
-  margin-left: auto;
+  margin: 60px 0;
+  text-align: center;
+  display: inline-block;
+  // margin-left: auto;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin: 60px;
+    margin-bottom: 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    text-align-last: left;
+    margin-top: 0;
+    margin-right: 0;
+  }
 }
 
 .footer-form {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
-  gap: 12px;
+  gap: 20px;
+
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+    gap: 12px;
+  }
 }
 
 .footer-email-input-field {
-  width: 358px;
+  max-width: 450px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -18,6 +39,10 @@
   background-color: transparent;
   padding: 16px 15px;
   color: var(--white-color);
+
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+  }
 }
 
 .footer-form-btn {
