--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -8,7 +8,7 @@
   margin-right: auto;
 
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/hero-bg.jpg);
+    url(../../images/hero-bg.jpg);
   background-color: #c4c4c4;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-repeat: no-repeat;
@@ -18,6 +18,15 @@
   @media screen and (min-width: 1200px) {
     @include section(200px);
     height: 600px;
+  }
+}
+
+@media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../../images/hero-bg@2x.jpg);
   }
 }
 
