--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -50,7 +50,7 @@
   }
 
   @media screen and (min-width: 1200px) {
-    width: 696px;
+    max-width: 696px;
     font-size: 44px;
     line-height: 1.36;
   }
