--- a/css/main.css
+++ b/css/main.css
@@ -856,7 +856,7 @@ span.logo-prefix {
 }
 @media screen and (min-width: 1200px) {
   .hero__title {
-    width: 696px;
+    max-width: 696px;
     font-size: 44px;
     line-height: 1.36;
   }
