--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -8,7 +8,7 @@
   margin-right: auto;
 
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../../images/hero-bg.jpg);
+    url(../images/hero-bg.jpg);
   background-color: #c4c4c4;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-repeat: no-repeat;
@@ -26,7 +26,7 @@
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
   .hero {
-    background-image: url(../../images/hero-bg@2x.jpg);
+    background-image: url(../images/hero-bg@2x.jpg);
   }
 }
 
